Closed Bug 396744 Opened 17 years ago Closed 17 years ago

Crash [@ nsAccessible::GetFinalState] with moving select, option and optgroup with display: none

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: surkov)

References

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(3 files, 1 obsolete file)

Attached file testcase
See testcase, which crashes current trunk builds after 500ms.
You need to download the testcase to your computer, because of the use of enhanced privileges.

It doesn't seem to crash on branch (I used the branch specific code for that), but it doesn't seem to crash there, so it might be a regression, somehow.

http://crash-stats.mozilla.com/report/index/36c06b8a-66d8-11dc-aca1-001a4bd43ef6
frame  	signature  	source
0 	nsAccessible::GetFinalState(unsigned int*, unsigned int*) 	mozilla/accessible/src/base/nsAccessible.cpp:2348
1 	nsHTMLSelectOptionAccessible::GetSelectState(unsigned int*, unsigned int*) 	mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp:858
2 	nsHTMLSelectOptionAccessible::GetState(unsigned int*, unsigned int*) 	mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp:613
3 	nsAccessible::GetFinalState(unsigned int*, unsigned int*) 	mozilla/accessible/src/base/nsAccessible.cpp:2297
4 	nsAccessible::State(nsIAccessible*) 	mozilla/accessible/src/base/nsAccessible.h:146
5 	nsAccessible::GetMultiSelectFor(nsIDOMNode*) 	mozilla/accessible/src/base/nsAccessible.cpp:1343
6 	nsHTMLSelectOptionAccessible::SelectionChangedIfOption(nsIContent*) 	mozilla/accessible/src/html/nsHTMLSelectAccessible.cpp:814
7 	nsDocAccessible::ContentStatesChanged(nsIDocument*, nsIContent*, nsIContent*, int) 	mozilla/accessible/src/base/nsDocAccessible.cpp:1200
8 	nsDocument::ContentStatesChanged(nsIContent*, nsIContent*, int) 	mozilla/content/base/src/nsDocument.cpp:2866
9 	nsHTMLOptionElement::SetSelectedInternal(int, int) 	mozilla/content/html/content/src/nsHTMLOptionElement.cpp:212
10 	nsHTMLSelectElement::OnOptionSelected(nsISelectControlFrame*, nsPresContext*, int, int, int) 	mozilla/content/html/content/src/nsHTMLSelectElement.cpp:846
etc..
Di you update to the 9/19 build? I put a fix in for a very similar bug.
Yes, this was tested, with:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a8pre) Gecko/2007091904 Minefield/3.0a8pre
Blocks: fox3access
Attached patch patchSplinter Review
reorganize getFinalState to take into account frame may be null for some cases.
Assignee: aaronleventhal → surkov.alexander
Status: NEW → ASSIGNED
Attachment #281620 - Flags: review?(aaronleventhal)
Comment on attachment 281620 [details] [diff] [review]
patch

Can you provide diff -w as well for this one please?
Attached patch patch -w (obsolete) — Splinter Review
Attached patch patch -wSplinter Review
Attachment #281639 - Attachment is obsolete: true
Comment on attachment 281640 [details] [diff] [review]
patch -w

Much easier to review :)

Thanks.
Attachment #281640 - Flags: review+
Attachment #281640 - Flags: approval1.9?
Attachment #281620 - Flags: review?(aaronleventhal)
Attachment #281640 - Flags: approval1.9? → approval1.9+
checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a8pre) Gecko/2007092105 Minefield/3.0a8pre
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsAccessible::GetFinalState]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: