Bug 396744 - crash [@nsAccessilbe::GetFinalState] with moving select, option and optgroup with display: none, r=aaronlev, a=dsicore